Start with raw semantic skeleton

--- a/index.html
+++ b/index.html
@@ -17,10 +17,34 @@
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
-		All your files in one secure location, accessible anywhere. Fylo stores all
-		your most important files in one secure location. Access them wherever you
-		need, share and collaborate with friends, family and co-workers. Sign up for
-		early access Sign Up Privacy Policy
+		<header>
+			<div class="header-elem">
+				<img src="images/logo.svg" alt="Fylo logo" />
+			</div>
+			<div class="header-elem">
+				<ion-icon name="logo-twitter"></ion-icon>
+				<ion-icon name="logo-facebook"></ion-icon>
+				<ion-icon name="mail"></ion-icon>
+			</div>
+		</header>
+
+		<main>
+			<h1>All your files in one secure location, accessible anywhere.</h1>
+
+			<p>
+				Fylo stores all your most important files in one secure location. Access
+				them wherever you need, share and collaborate with friends, family and
+				co-workers.
+			</p>
+
+			<h2>Sign up for early access</h2>
+			<form action="#">
+				<input type="text" />
+				<button>Sign Up</button>
+			</form>
+
+			<a href="#">Privacy Policy</a>
+		</main>
 
 		<footer>
 			<p class="attribution">
@@ -31,5 +55,7 @@
 				🎉
 			</p>
 		</footer>
+
+		<script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
 	</body>
 </html>
