Add fonts and colors to text

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 
 		<title>Frontend Mentor | Beta sign up split layout Challenge</title>
 
+		<link
+			href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:700&display=swap"
+			rel="stylesheet"
+		/>
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
