Style input section

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 			</p>
 
 			<h2>Sign up for early access</h2>
-			<form action="#">
-				<input type="text" />
-				<button>Sign Up</button>
+			<form action="#" id="signup">
+				<input type="text" class="rounded-shadowed" />
+				<button class="rounded-shadowed">Sign Up</button>
 			</form>
 
 			<a href="#">Privacy Policy</a>
