Apply Open Sans globally and move privacy link to the right

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 				<button class="rounded-shadowed">Sign Up</button>
 			</form>
 
-			<a href="#">Privacy Policy</a>
+			<a href="#" id="privacy-link">Privacy Policy</a>
 		</main>
 
 		<footer>
