Add hero image to the left

--- a/index.html
+++ b/index.html
@@ -21,34 +21,42 @@
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
-		<header>
-			<div class="header-elem">
-				<img src="images/logo.svg" alt="Fylo logo" />
+		<div class="container">
+			<div id="hero">
+				<img
+					src="images/illustration-main.svg"
+					alt="A Fylo user that holds the key to his securely locked folder"
+				/>
 			</div>
-			<div class="header-elem">
-				<ion-icon name="logo-twitter"></ion-icon>
-				<ion-icon name="logo-facebook"></ion-icon>
-				<ion-icon name="mail"></ion-icon>
+			<div id="main-page">
+				<header>
+					<div class="header-elem">
+						<img src="images/logo.svg" alt="Fylo logo" />
+					</div>
+					<div class="header-elem">
+						<ion-icon name="logo-twitter"></ion-icon>
+						<ion-icon name="logo-facebook"></ion-icon>
+						<ion-icon name="mail"></ion-icon>
+					</div>
+				</header>
+
+				<h1>All your files in one secure location, accessible anywhere.</h1>
+
+				<p>
+					Fylo stores all your most important files in one secure location.
+					Access them wherever you need, share and collaborate with friends,
+					family and co-workers.
+				</p>
+
+				<h2>Sign up for early access</h2>
+				<form action="#" id="signup">
+					<input type="text" class="rounded-shadowed" />
+					<button class="rounded-shadowed">Sign Up</button>
+				</form>
+
+				<a href="#" id="privacy-link">Privacy Policy</a>
 			</div>
-		</header>
-
-		<main>
-			<h1>All your files in one secure location, accessible anywhere.</h1>
-
-			<p>
-				Fylo stores all your most important files in one secure location. Access
-				them wherever you need, share and collaborate with friends, family and
-				co-workers.
-			</p>
-
-			<h2>Sign up for early access</h2>
-			<form action="#" id="signup">
-				<input type="text" class="rounded-shadowed" />
-				<button class="rounded-shadowed">Sign Up</button>
-			</form>
-
-			<a href="#" id="privacy-link">Privacy Policy</a>
-		</main>
+		</div>
 
 		<footer>
 			<p class="attribution">
