Rearrange and re-section text sections in main page

--- a/index.html
+++ b/index.html
@@ -40,20 +40,24 @@
 					</div>
 				</header>
 
-				<h1>All your files in one secure location, accessible anywhere.</h1>
+				<main>
+					<h1>All your files in one secure location, accessible anywhere.</h1>
 
-				<p>
-					Fylo stores all your most important files in one secure location.
-					Access them wherever you need, share and collaborate with friends,
-					family and co-workers.
-				</p>
+					<p>
+						Fylo stores all your most important files in one secure location.
+						Access them wherever you need, share and collaborate with friends,
+						family and co-workers.
+					</p>
 
-				<h2>Sign up for early access</h2>
-				<form action="#" id="signup">
-					<input type="text" class="rounded-shadowed" />
-					<button class="rounded-shadowed">Sign Up</button>
-				</form>
+					<div id="signup-section">
+						<h2>Sign up for early access</h2>
 
+						<form action="#" id="signup">
+							<input type="text" class="rounded-shadowed" />
+							<button class="rounded-shadowed">Sign Up</button>
+						</form>
+					</div>
+				</main>
 				<a href="#" id="privacy-link">Privacy Policy</a>
 			</div>
 		</div>
