Add headers for mobile and desktop that disappear modally

--- a/index.html
+++ b/index.html
@@ -23,13 +23,24 @@
 	<body>
 		<div class="container">
 			<div id="hero">
+				<header id="mobile-header">
+					<div class="header-elem">
+						<img id="logo" src="images/logo.svg" alt="Fylo logo" />
+					</div>
+					<div class="header-elem">
+						<ion-icon name="logo-twitter"></ion-icon>
+						<ion-icon name="logo-facebook"></ion-icon>
+						<ion-icon name="mail"></ion-icon>
+					</div>
+				</header>
 				<img
+					id="hero-img"
 					src="images/illustration-main.svg"
 					alt="A Fylo user that holds the key to his securely locked folder"
 				/>
 			</div>
 			<div id="main-page">
-				<header>
+				<header id="desktop-header">
 					<div class="header-elem">
 						<img src="images/logo.svg" alt="Fylo logo" />
 					</div>
