Add ids to button and input

--- a/index.html
+++ b/index.html
@@ -64,8 +64,10 @@
 						<h2>Sign up for early access</h2>
 
 						<form action="#" id="signup">
-							<input type="text" class="rounded-shadowed" />
-							<button class="rounded-shadowed">Sign Up</button>
+							<input id="signup-email" type="text" class="rounded-shadowed" />
+							<button id="signup-button" class="rounded-shadowed">
+								Sign Up
+							</button>
 						</form>
 					</div>
 				</main>
